<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/login_background_cl"
    android:paddingStart="@dimen/_20sdp"
    android:paddingEnd="@dimen/_20sdp"
    tools:context=".Activities.Login.Login_Phone">


    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/enter_your_phone_number"
        android:textAlignment="center"
        android:textColor="@color/login_heading_cl"
        android:textSize="@dimen/_20ssp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/m_chat_will_send_sms_to_verify_your_number"
        android:textAlignment="center"
        android:textColor="@color/login_heading_cl"
        android:textSize="@dimen/_20ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.313"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/phoneNo_edt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_25sdp"
        android:ems="6"
        android:hint="Phone Number"
        android:inputType="phone"
        android:textColor="@color/white"
        android:textColorHint="@color/login_subtext_cl"
        app:layout_constraintEnd_toEndOf="@+id/country_name"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/country_code"
        app:layout_constraintTop_toBottomOf="@+id/country_name" />

    <TextView
        android:id="@+id/country_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="@dimen/_20ssp"
        app:layout_constraintEnd_toEndOf="@+id/textView3"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <com.hbb20.CountryCodePicker
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:id="@+id/country_code"
        app:ccp_contentColor="@color/white"
        app:ccp_showFlag="false"
        app:ccp_showNameCode="false"
        app:layout_constraintBottom_toBottomOf="@+id/phoneNo_edt"
        app:layout_constraintEnd_toStartOf="@+id/phoneNo_edt"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="@+id/country_name"
        app:layout_constraintTop_toTopOf="@+id/phoneNo_edt" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/carrier_sms_charge_may_apply"
        android:textColor="@color/login_subtext_cl"
        android:textAlignment="center"
        android:textSize="@dimen/_15ssp"
        android:layout_marginTop="@dimen/_13sdp"
        app:layout_constraintEnd_toEndOf="@+id/phoneNo_edt"
        app:layout_constraintStart_toStartOf="@+id/country_code"
        app:layout_constraintTop_toBottomOf="@+id/phoneNo_edt" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/next_Btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_50sdp"
        android:layout_marginEnd="@dimen/_50sdp"
        android:background="@drawable/ctm_btn_accept"
        android:text="@string/next"
        android:textColor="@color/white"
        android:textSize="@dimen/_20ssp"
        android:minHeight="@dimen/_50sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:layout_constraintVertical_bias="0.155" />

</androidx.constraintlayout.widget.ConstraintLayout>